Adding more style and html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <div class="text-button-Container">
             <h1>This website is awesome</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-              Rem pariatur sunt velit id eos, saepe itaque.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+              pariatur sunt velit id eos, saepe itaque.
             </p>
             <button>Sign up</button>
           </div>
@@ -35,6 +35,9 @@
             />
           </div>
         </div>
+      </div>
+      <div class="section-two">
+        <h1 class="random-info-title">Some Random Information</h1>
       </div>
     </div>
   </body>
