--- a/index.html
+++ b/index.html
@@ -38,6 +38,32 @@
       </div>
       <div class="section-two">
         <h1 class="random-info-title">Some Random Information</h1>
+        <div class="four-box">
+          <div>
+            <div class="blue-box"></div>
+            <p>This is some subtext under illustration or image</p>
+          </div>
+          <div>
+            <div class="blue-box"></div>
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <div class="blue-box"></div>
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <div class="blue-box"></div>
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+        </div>
+      </div>
+      <div class="section-three">
+        <p class="quote-text">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          Knows? All i know that it lookss nice.
+        </p>
+        <p class="quote">-Thor, God of Thunder</p>
       </div>
     </div>
   </body>
