--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
               pariatur sunt velit id eos, saepe itaque.
             </p>
-            <button>Sign up</button>
+            <button class="first-button">Sign up</button>
           </div>
           <div class="image-one-container">
             <img
@@ -58,12 +58,28 @@
         </div>
       </div>
       <div class="section-three">
-        <p class="quote-text">
+        <p class="quote">
           This is an inspiring quote, or a testimonial from a customer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
           Knows? All i know that it lookss nice.
         </p>
-        <p class="quote">-Thor, God of Thunder</p>
+        <p class="thor">-Thor, God of Thunder</p>
+      </div>
+      <div class="section-four">
+        <div class="inner-container">
+          <div>
+            <h3>Call to action! It's time!</h3>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <div>
+            <button class="sign-up-button">Sign up</button>
+          </div>
+        </div>
+      </div>
+      <div class="section-five">
+        <footer>Copyright &copy; The odin Project 2021</footer>
       </div>
     </div>
   </body>
